--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-
+ <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
